dev/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routemee-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: routemee-backend
  template:
    metadata:
      labels:
        app: routemee-backend
    spec:
      containers:
        - env:
            - name: APP_PORT
              value: "9000"
            - name: DATABASE_NAME
              value: prueba_perdomo
            - name: DATABASE_PORT
              value: "3730"
          image: waterpolord/routemee-backend
          name: routemee-backend
          ports:
            - containerPort: 9000
          resources: {}
      restartPolicy: Always
