dev/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routemee-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: routemee
      tier: frontend
      track: stable
  template:
    metadata:
      labels:
        app: routemee
        tier: frontend
        track: stable
    spec:
      containers:
        - env:
            - name: API_URL
              value: http://routemee:9000
            - name: APP_PORT
              value: "80"
            - name: CORS
              value: "false"
            - name: HTTPS_METHOD
              value: noredirect
            - name: URL
              value: routemee
          image: waterpolord/routemee-frontend
          name: routemee-frontend
          ports:
            - containerPort: 80
          resources: {}
          stdin: true
      restartPolicy: Always
