dev/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: routemee
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: routemee
    tier: backend
