dev/frontend-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-tcp
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8080
      nodePort: 31961
    - name: "https"
      port: 443
      targetPort: 8080
      nodePort: 31808
  selector:
    app: frontend-tcp
  type: LoadBalancer
status:
  loadBalancer: {}
